@@ -6,6 +6,7 @@
 #include <Pothos/Proxy.hpp>
 #include <Poco/Format.h>
 #include <Poco/JSON/Object.h>
+#include <Pothos/Util/Network.hpp>
 #include <iostream>
 
 static void network_test_harness(const std::string &scheme, const bool serverIsSource)
@@ -15,14 +16,14 @@ static void network_test_harness(const std::string &scheme, const bool serverIsS
     auto env = Pothos::ProxyEnvironment::make("managed")->findProxy("Pothos/BlockRegistry");
 
     //create server
-    auto server_uri = Poco::format("%s://[::]", scheme);
+    auto server_uri = Poco::format("%s://%s", scheme, Pothos::Util::getWildcardAddr());
     std::cout << "make server " << server_uri << std::endl;
     auto server = env.callProxy(
         (serverIsSource)?"/blocks/network_source":"/blocks/network_sink",
         server_uri, "BIND");
 
     //create client
-    auto client_uri = Poco::format("%s://[::1]:%s", scheme, server.call<std::string>("getActualPort"));
+    auto client_uri = Poco::format("%s://%s", scheme, Pothos::Util::getLoopbackAddr(server.call<std::string>("getActualPort")));
     std::cout << "make client " << client_uri << std::endl;
     auto client = env.callProxy(
         (serverIsSource)?"/blocks/network_sink":"/blocks/network_source",
