@@ -6,14 +6,15 @@
 #include <Pothos/Proxy.hpp>
 #include <Pothos/Remote.hpp>
 #include <Poco/JSON/Object.h>
+#include <Pothos/Util/Network.hpp>
 #include <iostream>
 
 POTHOS_TEST_BLOCK("/blocks/tests", test_network_topology)
 {
     //spawn a server and client
     std::cout << "create proxy server\n";
-    Pothos::RemoteServer server("tcp://[::]");
-    Pothos::RemoteClient client("tcp://[::1]:"+server.getActualPort());
+    Pothos::RemoteServer server("tcp://"+Pothos::Util::getWildcardAddr());
+    Pothos::RemoteClient client("tcp://"+Pothos::Util::getLoopbackAddr(server.getActualPort()));
 
     //local and remote block registries
     auto remoteReg = client.makeEnvironment("managed")->findProxy("Pothos/BlockRegistry");
