@@ -5,6 +5,7 @@
 #include <Pothos/Proxy.hpp>
 #include <Pothos/Remote.hpp>
 #include <Pothos/System/Logger.hpp>
+#include <Pothos/Util/Network.hpp>
 #include <Poco/URI.h>
 #include <Poco/Net/SocketAddress.h>
 #include <Poco/Logger.h>
@@ -70,9 +71,9 @@ void EnvironmentEval::update(void)
 
 HostProcPair EnvironmentEval::getHostProcFromConfig(const QString &zoneName, const Poco::JSON::Object::Ptr &config)
 {
-    if (zoneName == "gui") return HostProcPair("gui://[::1]", "gui");
+    if (zoneName == "gui") return HostProcPair("gui://"+Pothos::Util::getLoopbackAddr(), "gui");
 
-    auto hostUri = config?config->getValue<std::string>("hostUri"):"tcp://[::1]";
+    auto hostUri = config?config->getValue<std::string>("hostUri"):("tcp://"+Pothos::Util::getLoopbackAddr());
     auto processName = config?config->getValue<std::string>("processName"):"";
     return HostProcPair(hostUri, processName);
 }
@@ -85,7 +86,7 @@ Pothos::ProxyEnvironment::Sptr EnvironmentEval::makeEnvironment(void)
 
     //connect to the remote host and spawn a server
     auto serverEnv = Pothos::RemoteClient(hostUri).makeEnvironment("managed");
-    auto serverHandle = serverEnv->findProxy("Pothos/RemoteServer").callProxy("new", "tcp://[::1]", false/*noclose*/);
+    auto serverHandle = serverEnv->findProxy("Pothos/RemoteServer").callProxy("new", "tcp://"+Pothos::Util::getLoopbackAddr(), false/*noclose*/);
 
     //construct the uri for the new server
     auto actualPort = serverHandle.call<std::string>("getActualPort");
