@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.3.0 (pending)
 ==========================
 
+- Added network utils for IPv6 with fall-back support
 - Improved error reporting and formatting for self tests
 - Fixed text fixture symbol declaration for OSX
 - Set library SOVERSION using POTHOS_ABI_VERSION
